- Fixed the display of the footer, namely the sitemap element. - Refixed the navbar dropdown. - The default font size of a tags needed fixing. - The top header icons now always stay align. - The phone icon in the search form in the header now correctly displays pointer on hover. - The search button border in the header is now radius 0 at bottom-left and top-left corners on large viewports. - The search forms in the header now have the correct border. - Fixed the button not being coloured on the nav bar dropdown being hovered

--- a/partials/_footer.scss
+++ b/partials/_footer.scss
@@ -29,6 +29,7 @@
                 line-height: 1.375rem;
             }
             a {
+                font-size: 0.8125rem;
                 color: $white;
                 text-decoration: none;
             }
@@ -63,6 +64,7 @@
         a {
             color: $white;
             text-decoration: none;
+            font-size: .8125rem;
         }
 
         a:hover {
