--- a/partials/_navigation.scss
+++ b/partials/_navigation.scss
@@ -2,8 +2,8 @@
 
 .main-nav {
 
-    padding-left: 56.6px;
-    padding-right: 56.6px;
+    padding-left: 23px;
+    padding-right: 23px;
     display: flex;
     justify-content: center;
     height: 99.01px;
@@ -35,12 +35,11 @@
 .dropdown {
     float: left;
     overflow: hidden;
-  }
+}
   
-  /* Style the dropdown button to fit inside the topnav */
-  .dropdown .dropbtn {
+/* Style the dropdown button to fit inside the topnav */
+.dropdown .dropbtn {
     display: flex;
-    font-size: 1rem;
     text-transform: uppercase;
     border: none;
     outline: none;
@@ -48,52 +47,55 @@
     font-family: inherit;
     text-align: center;
     vertical-align: middle;
-  }
+}
   
-  /* Style the dropdown content (hidden by default) */
-  .dropdown-content {
+/* Style the dropdown content (hidden by default) */
+.dropdown-content {
     display: none;
     position: absolute;
     width: 167px;
     z-index: 6;
+    a {
+        font-size: 1rem;
+    }
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
-  }
+}
 
-  #dc-1 {
+#dc-1 {
     background-color: #526781;
-  }
+}
 
-  #dc-2 {
+#dc-2 {
     background-color: #286abd;
-  }
+}
   
-  #dc-3 {
+#dc-3 {
     background-color: #25a25a;
-  }
+}
   
-  #dc-4 {
+#dc-4 {
     background-color: #bc2c28;
-  }
+}
   
-  #dc-5 {
+#dc-5 {
     background-color: #79539a;
-  }
+}
   
-  #dc-6 {
+#dc-6 {
     background-color: #de093f;
-  }
+}
   
-  #dc-7 {
+#dc-7 {
     background-color: #a3331d;
-  }
+}
 
-  .dropdown-content a:hover {
+.dropdown-content a:hover {
     text-decoration: underline;
-  }
+}
   
-  /* Style the links inside the dropdown */
-  .dropdown-content a {
+/* Style the links inside the dropdown */
+.dropdown-content a {
     float: none;
     color: $white;
     padding: 12px 16px;
@@ -101,60 +103,74 @@
     display: block;
     text-align: center;
     text-transform: none;
-  }
+}
   
   
-  /* Show the dropdown menu when the user moves the mouse over the dropdown button */
-  .dropdown:hover .dropdown-content {
+/* Show the dropdown menu when the user moves the mouse over the dropdown button */
+.dropdown:hover .dropdown-content {
     display: block;
-  }
+}
 
-#nav-1:hover {
-    background-color: $style-bes;
-    .fa-grip {
-        color: #ffffff;
+#dropdown-1:hover {
+    #nav-1 {
+        background-color: $style-bes;
+        .fa-grip {
+            color: #ffffff;
+        }
     }
 }
 
-#nav-2:hover {
-    background-color: $style-it;
-    .fa-display {
-        color: #ffffff;
+#dropdown-2:hover {
+    #nav-2 {
+        background-color: $style-it;
+        .fa-display {
+            color: #ffffff;
+        }
     }
 }
 
-#nav-3:hover {
-    background-color: $style-dig;
-    .fa-chart-simple {
-        color: #ffffff;
+#dropdown-3:hover {
+    #nav-3 {
+        background-color: $style-dig;
+        .fa-chart-simple {
+            color: #ffffff;
+        }
     }
 }
 
-#nav-4:hover {
-    background-color: $style-tel;
-    .fa-phone {
-        color: #ffffff;
+#dropdown-4:hover {
+    #nav-4 {
+        background-color: $style-tel;
+        .fa-phone {
+            color: #ffffff;
+        }
     }
 }
 
-#nav-5:hover {
-    background-color: $style-web;
-    .fa-code {
-        color: #ffffff;
+#dropdown-5:hover {
+    #nav-5 {
+        background-color: $style-web;
+        .fa-code {
+            color: #ffffff;
+        }
     }
 }
 
-#nav-6:hover {
-    background-color: $style-cyb;
-    .fa-shield-halved {
-        color: #ffffff;
+#dropdown-6:hover {
+    #nav-6 {
+        background-color: $style-cyb;
+        .fa-shield-halved {
+            color: #ffffff;
+        }
     }
 }
 
-#nav-7:hover {
-    background-color: $style-dev;
-    .fa-graduation-cap {
-        color: #ffffff;
+#dropdown-7:hover {
+    #nav-7 {
+        background-color: $style-dev;
+        .fa-graduation-cap {
+            color: #ffffff;
+        }
     }
 }
 
