--- a/partials/_news.scss
+++ b/partials/_news.scss
@@ -13,6 +13,7 @@
         font-size: 1.625rem;
     }
     a {
+        font-size: 1.625rem;
         color: $off-black;
         text-decoration: none;
     }
